<resources>
    <string name="app_name">My Optimize</string>
    <string name="care">注意点</string>
    <string name="problem">问题</string>
    <string name="exit_warning">再按一次退出</string>
    <string name="giving_up_modifies">再按一次放弃修改返回</string>
    <string name="create_new_care_item">创建注意点</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="care_type">类型：</string>
    <string name="color">颜色：</string>
    <string name="create">创建</string>
    <string name="empty_title_warning">标题不能为空！</string>
    <string name="confirm">确定</string>
    <string name="home">主页</string>
    <string name="archive">已归档</string>
    <string name="options">选项</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="share">分享</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="sort">排序</string>
    <string name="tips">Tips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_description">编辑描述</string>
    <string name="save_changes">保存更改</string>
    <string name="care_item_details">注意点详情</string>
    <string name="delete">删除</string>
    <string name="details">详情</string>
    <string name="properties">属性</string>
    <string name="created_at">创建于：</string>
    <string name="existed_time">已经过：</string>
    <string name="achieved">已达成</string>
    <string name="unachieved">未达成</string>
    <string name="days">天</string>
    <string name="delete_warning">您确定要删除吗？</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="edit_description_title">编辑描述标题</string>
    <string name="save">保存</string>
    <string name="do_archive">归档</string>
    <string name="archive_warning">该注意点尚未达成，您确定要放弃并归档吗？</string>
    <string name="archive_confirm">您确定要归档吗？</string>
    <string name="give_up_confirm">你真的要放弃吗？</string>
    <string name="yes">是的</string>
    <string name="unarchive_warning">您确定要取消归档吗？</string>
    <string name="unarchive_tip">欢迎回来！这次可不要放弃了呦~</string>
    <string name="ok">好的</string>
    <string name="lasted_time">持续时间：</string>
    <string name="achieved_at">达成于：</string>
    <string name="archived_at">归档于：</string>
    <string name="goal">目标：</string>
    <string name="punishment">惩罚：</string>
    <string name="progress">进度</string>
    <string name="records">记录</string>
    <string name="progress_bar_title">当前进度</string>
    <string name="succeeded">达成：</string>
    <string name="failed">失败：</string>
    <string name="sign_in">打卡</string>
    <string name="succeeded_">达成</string>
    <string name="failed_">失败</string>
    <string name="confirm_">确定</string>
    <string name="today_is">今天是：</string>
    <string name="progress_">进度：</string>
    <string name="succeeded__">达成：</string>
    <string name="failed__">失败：</string>
    <string name="percentage">完成度：</string>
    <string name="calendar_view">日历</string>
    <string name="no_record_selected">您没有选中任何记录</string>
    <string name="modified">修改：</string>
    <string name="care_has_not_been_created">此时注意点尚未被创建</string>
    <string name="day_has_not_come_yet">现在还没有到这天</string>
    <string name="care_item_has_been_archived">注意点此时已归档</string>
    <string name="period_length">周期：</string>
    <string name="every">每</string>
    <string name="signed_in">已签到</string>
    <string name="signed_out">已取消签到</string>
    <string name="sub_goal">子目标：</string>
    <string name="sub_progress_zero">子进度为0</string>
    <string name="sub_progress">子进度：</string>
    <string name="sign_time_limitation">签到时间限制：</string>
    <string name="end_time_less_than_start_time"><![CDATA[结束时间 <= 开始时间]]></string>
    <string name="current_time_out_of_limitation">当前时间不在签到时间范围内</string>
    <string name="everyday">每天</string>
    <string name="sign_time_limitation_">签到时间限制</string>
    <string name="care_item_auto_sort">注意点按状态自动排序</string>
    <string name="backup">备份</string>
    <string name="language">语言</string>
    <string name="chinese_simplified">简体中文</string>
    <string name="english_us">English (United States)</string>
    <string name="backup_confirm">请输入备份文件名</string>
    <string name="backed_up_at">备份于</string>
    <string name="recover">恢复</string>
    <string name="create_new_problem_item">创建问题</string>
    <string name="rank">等级：</string>
    <string name="problem_item_auto_sort">问题按等级自动排序</string>
    <string name="archive_warning_problem">该问题尚未解决，您确定要放弃并归档吗？</string>
    <string name="analysis">分析</string>
    <string name="solution">解决</string>
    <string name="status">状态：</string>
    <string name="solved">已解决</string>
    <string name="solving">解决中</string>
    <string name="solved_at">解决于：</string>
    <string name="app_introduction"><![CDATA[\t\tMy Optimize 是一款用于帮助人们优化自己的App，主要功能为帮助人们达成自己想坚持的事情&帮助人们解决遇到的问题。更多请参阅：侧滑菜单->帮助]]></string>
    <string name="app_version">版本：1.0.0</string>
    <string name="introduction">介绍</string>
    <string name="developer">开发者</string>
    <string name="links">链接</string>
    <string name="contact_developer">联系开发者</string>
    <string name="help_translate">帮助翻译</string>
    <string name="view_source_code">在Github上查看源代码</string>
    <string name="support_developer">支持开发者</string>
    <string name="rate_app">评分此应用</string>
    <string name="alipay">支付宝：</string>
    <string name="close">关闭</string>
    <string name="rate_not_supported">找不到应用市场</string>
    <string name="share_text"><![CDATA[My Optimize 是一款用于帮助人们优化自己的App，主要功能为帮助人们达成自己想坚持的事情&帮助人们解决遇到的问题。欢迎使用：https://github.com/OneCivilization/MyWorld/raw/master/MyOptimize/MyOptimize-release.apk]]></string>
    <string name="email_not_supported">您的手机中没有安装Email发送软件，请手动发送Email至onecivilization.cn@gmail.com</string>
    <string name="user_guide">用户指南</string>
    <string name="paypal">PayPal：</string>
    <string name="alipay_account">2391682070@qq.com</string>
    <string name="paypal_account">onecivilization.cn@gmail.com</string>
    <string name="help_introduction"><![CDATA[\t\tMy Optimize 是一款用于帮助人们提升与优化自身的App，它的主要功能有两个：1.帮助人们达成自己想坚持的事情。2.帮助人们解决遇到的问题。\n\n\t\t其中，“自己想坚持的事情”可以是自己想要养成的习惯（如“坚持每天早睡早起”、“每周跑步3次”），也可以是自己希望自己能作出的改变（如“多运动”、“性格变得外向些”），还可以是自己希望在应对某些事件时能做出的反应（如“睡觉前不玩手机”、“在公共场所不要吸烟”）。不过无论是上述中哪种类型，它们都有一个共同点——需要经常去注意并提醒自己这些事项，因此，这里我们称它们为“注意点”。而App的第一个功能——“帮助人们达成自己想坚持的事情”正是通过创建“注意点”来实现的。\n\n\t\t在这款App中，我们提供了3大类（共6种）注意点：\n\n\t\t1.纯文本型注意点：\n\n\t\t仅仅记录并显示一段文字以提醒自己，当你觉得自己已经达成该注意点时，可以手动勾选其状态为“已达成”。纯文本型注意点通常对应于前面所说的“自己希望自己能作出的改变”，如“多运动”、“性格变得外向些”等非量化的、非具体的注意点。另外，纯文本型注意点可以设置颜色（唯一可以自定义颜色的注意点类型），随着其达成程度的不同，你可以相应地改变它的颜色以改变其视觉吸引力。\n\n\t\t2.事件驱动型注意点：\n\n\t\t通常对应于前面所说的“自己希望在应对某些事件时能做出的反应”，如“睡觉前不玩手机”、“在公共场所不要吸烟”等由特定事件驱动的形如“XXX时XXX”的注意点。每当该事件发生时，你可以打卡记录你的处理结果（积极/消极）。当创建该类型注意点时，你需要设置目标数与惩罚数，其中目标数为你希望自己积极处理该事件的总次数，而惩罚数为每当你消极处理一次事件时所自动扣去的已有积极次数。当进度=目标数时（进度=积极处理次数-消极处理次数*惩罚数），该注意点会自动达成。另外，在事件驱动型注意点的详情界面中的日历视图你可以修改打卡记录，不过你修改记录的次数会显示在日历的右上角。\n\n\t\t3.周期型注意点：\n\n\t\t通常对应于前面所说的“自己想要养成的习惯”，如“坚持每天早睡早起”、“每周跑步3次”等周期性的注意点。当创建该类型的注意点时，除了要设置目标数与惩罚数外，还需要设置周期时长（最小周期时长为1天）。在单个周期内你可以反复打卡与取消打卡，不过当经过这个周期后，你将无法修改该周期内的打卡记录。每当新的周期开始时，该注意点的状态会自动刷新。为了使周期型注意点的具体表现更好，我们为它增加了两个可选属性：是否带有子项目以及是否带有打卡时间限制，其中“带有子项目”对应于在单个周期内可以打卡多于1次的注意点，如“每周跑步3次”；“带有打卡时间限制”对应于需要限制在一天中的可打卡时间段的注意点，如“坚持每天早起”可以设置可打卡时间段为“6：00-7：00”；另外，两者也可以相结合，一个子项目对应一个打卡限制时间段，如“坚持每天早睡早起”可以设置子项目数为2、可打卡时间段为“6：00-7：00，21：00-22：00”。\n\n\t\t对于所有类型的注意点，你都可以编辑其“描述”（一段文本），你可以用它记录该注意点的产生背景、创建原因、坚持动力、坚持过程等。另外，这段文本的标题也是可以编辑的，默认为”描述“。\n\n\t\t关于注意点的状态，我们使用颜色和打卡按钮上的图案共同表示，当进度为负时，若未打卡，显示为红色-叉,若打卡成功，显示为蓝色-对勾；当0<=进度<目标时，若打卡成功，显示为蓝色-对勾，否则显示为橙色-注意点类型所对应的标识（纯文本型无标识，事件驱动型为圈，周期型为一横，带子项目周期型为数字）；当进度>=目标时，显示为绿色-对勾。另外，除了可以在主界面中点击打卡按钮来打卡外，在注意点详情界面中点击进度条也可以打卡。\n\n\t\t介绍完了第一个功能，那么接下来再让我们来看看这款App的第二个功能：帮助人们解决遇到的问题。在生活中我们时常会感到不顺心、焦躁，无论如何，只要我们并不开心，那就说明我们的生活中出了什么问题，这时，如果只是顺其自然地焦躁下去，那么状况只会随着时间恶化。因此，此时我们首先需要找出问题所在——是什么造成了当前的状况？找到问题后，无论是什么问题，都可以通过3个步骤解决：1.描述问题：准确地认识、描述和定义你的问题，如问题的产生背景、具体表现、所导致的结果等；2.分析问题：结合问题的产生背景、问题的特点等分析问题的产生原因，找出是什么导致了问题的发生；3.解决问题：根据问题的产生原因给出相应的解决方案。基于这个理论，在这款App中你可以创建问题来帮助自己完成这个流程，它可以为你记录问题的描述、分析以及解决方案。或许这个问题解决流程看起来平淡无奇、人尽皆知，然而当你将之认真地付诸实践时，你会发现，当与理性思维结合在一起时，它是无敌的。另外，你不一定必须得看着问题详情的界面来思考如何解决问题，你可以在任何时候思考，然后在有空时把思考结果记录下来。需要注意的是，通常请不要期待能在短时间内解决问题，一个问题的解决可能花费几天甚至几个月的时间，因此当你发现问题后你可以先记下来，然后慢慢解决，而不用因无法快速解决问题就中途放弃。\n\n\t\t介绍完了这款App的主要功能，相信你们也一定发现了，这款App所做的一切都只是记录，它只是一个类似于纸和笔的东西，使用它并不一定能切实优化自己——就像纸和笔不一定能提升你的思想深度一样，而这一点，所有同类软件都是一样的，因为优化自己是你的工作，而App所做的，只是帮助你更轻松有序地完成这个工作。如果你是希望找一款App来督促自己优化自己，那么很抱歉，这款App很可能使你失望，你需要先去寻找优化自己的动力；如果你是希望优化自己，正在找一款App来帮助自己记录，那么这款App很可能为你带来惊喜。\n\n\t\t下面，再来介绍一下一些杂项功能。注意点和问题都是可以生成长截图分享给他人的，生成的长截图保存在SD卡的My Optimize文件夹中的Screenshots子文件夹中。在设置中，我们提供了“注意点按状态自动排序”和“问题按等级自动排序”选项，它们是默认开启的。其实我们还提供了拖动排序功能，不过这一功能在以上选项开启时无法使用，因为这将可能导致拖动排序的结果与您所希望的不一致，如果您希望手动更改项目的排序，请先关闭对应的选项。在设置中，我们还提供了备份数据的功能，备份的数据保存在SD卡的My Optimize文件夹中的Backup子文件夹中。关于语言设置，目前仅支持简体中文和English（US），其中英语由开发者自己翻译，限于其英语水平，可能存在翻译错误的情况，如果您发现了翻译错误，或是愿意帮助我们翻译成其它语言，欢迎点击侧滑菜单->反馈或侧滑菜单->关于->帮助翻译。\n\n\t\t最后，这款App由OneCivilization团队开发，隶属于My World系列App（还有日志类、思维管理类、任务管理类等应用，目前均未开发完毕），并基于GPL3协议开源，您可以点击侧滑菜单->关于->在Github上查看源代码来查看源代码。如果您觉得这款App不错，并希望它能更好地发展下去、开发者能带来更多精彩实用的App，欢迎点击关于界面中的“支持开发者”和“评分此应用”选项。\n\n\n\n*此处只提供整体功能介绍，更多细节及具体操作方式请点击具体界面中的tips选项（右上角的小灯泡）]]></string>
    <string name="tips_text_care">*点击注意点标题即可编辑标题，但标题不可为空\n\n*“描述”是一段可编辑的文本，你可以用它来记录该注意点的产生背景、创建原因、坚持动力、坚持过程等。另外，这段文本的标题也是可以编辑的，点击其底部的最后编辑时间即可编辑描述的标题\n\n*在“属性”中，你可以点击状态显示按钮来更改注意点的达成状态；\n\n*在“属性”中，你可以随时更改注意点的颜色，不过当注意点达成后，其颜色将会被锁定为绿色（表示该注意点已达成）\n\n*点击标题栏中的分享按钮将会生成当前屏幕的长截图进行分享，截图文件将会被保存在SD卡中的My Optimize/Screenshots文件夹中\n\n*纯文本型注意点：\n\n\t\t仅仅记录并显示一段文字以提醒自己，当你觉得自己已经达成该注意点时，可以手动勾选其状态为“已达成”。纯文本型注意点通常对应于“自己希望自己能作出的改变”，如“多运动”、“性格变得外向些”等非量化的、非具体的注意点。另外，纯文本型注意点可以设置颜色（唯一可以自定义颜色的注意点类型），随着其达成程度的不同，你可以相应地改变它的颜色以改变其视觉吸引力</string>
    <string name="tips_nonperiodic_care">*点击注意点标题即可编辑标题，但标题不可为空\n\n*“描述”是一段可编辑的文本，你可以用它来记录该注意点的产生背景、创建原因、坚持动力、坚持过程等。另外，这段文本的标题也是可以编辑的，点击其底部的描述最后编辑时间即可编辑描述的标题\n\n*在“进度”中，点击进度条即可打卡\n\n*在“记录”的日历中，点击具体日期即可查看/编辑当天的打卡记录。其中，蓝色表示注意点创建于当天，绿色表示当天有积极打卡记录，红色表示当天有消极打卡记录，灰色表示当天累计进度为0 但存在打卡记录，“今天”用深蓝色数字标识\n\n*如果你修改过打卡记录，修改次数将会在日历的右上角显示\n\n*点击标题栏中的分享按钮将会生成当前屏幕的长截图进行分享，截图文件将会被保存在SD卡中的My Optimize/Screenshots文件夹中\n\n*事件驱动型注意点：\n\n\t\t通常对应于“自己希望在应对某些事件时能做出的反应”，如“睡觉前不玩手机”、“在公共场所不要吸烟”等由特定事件驱动的形如“XXX时XXX”的注意点。每当该事件发生时，你可以打卡记录你的处理结果（积极/消极）。当创建该类型注意点时，你需要设置目标数与惩罚数，其中目标数为你希望自己积极处理该事件的总次数，而惩罚数为每当你消极处理一次事件时所自动扣去的已有积极次数。当进度=目标数时（进度=积极处理次数-消极处理次数*惩罚数），该注意点会自动达成。另外，在事件驱动型注意点的详情界面中的日历视图你可以修改打卡记录，不过你修改记录的次数会显示在日历的右上角</string>
    <string name="tips_periodic_care">*点击注意点标题即可编辑标题，但标题不可为空\n\n*“描述”是一段可编辑的文本，你可以用它来记录该注意点的产生背景、创建原因、坚持动力、坚持过程等。另外，这段文本的标题也是可以编辑的，点击其底部的描述最后编辑时间即可编辑描述的标题\n\n*在“进度”中，点击进度条即可打卡/取消打卡\n\n*在“进度”中，点击进度条右上角的周期显示文字，即可切换显示注意点的创建日期\n\n*在“记录”的日历中，点击具体日期即可查看当天的打卡记录。其中，蓝色表示注意点创建于当天，绿色表示当天有积极打卡记录，红色表示当天有消极打卡记录，灰色表示当天累计进度为0 但存在打卡记录，“今天”用深蓝色数字标识。周期型注意点不可以更改打卡记录\n\n*点击标题栏中的分享按钮将会生成当前屏幕的长截图进行分享，截图文件将会被保存在SD卡中的My Optimize/Screenshots文件夹中\n\n*周期型注意点：\n\n\t\t通常对应于“自己想要养成的习惯”，如“坚持每天早睡早起”、“每周跑步3次”等周期性的注意点。当创建该类型的注意点时，除了要设置目标数与惩罚数外，还需要设置周期时长（最小周期时长为1天）。在单个周期内你可以反复打卡与取消打卡，不过当经过这个周期后，你将无法修改该周期内的打卡记录。每当新的周期开始时，该注意点的状态会自动刷新。为了使周期型注意点的具体表现更好，我们为它增加了两个可选属性：是否带有子项目以及是否带有打卡时间限制，其中“带有子项目”对应于在单个周期内可以打卡多于1次的注意点，如“每周跑步3次”；“带有打卡时间限制”对应于需要限制在一天中的可打卡时间段的注意点，如“坚持每天早起”可以设置可打卡时间段为“6：00-7：00”；另外，两者也可以相结合，一个子项目对应一个打卡限制时间段，如“坚持每天早睡早起”可以设置子项目数为2、可打卡时间段为“6：00-7：00，21：00-22：00”</string>
    <string name="tips_description">*“描述”是一段可编辑的文本，你可以用它来记录该注意点的产生背景、创建原因、坚持动力、坚持过程等。另外，这段文本的标题也是可以编辑的，点击“描述”字样即可编辑“描述”的标题</string>
    <string name="tips_help">*此处仅提供关于App的整体性功能介绍，具体的操作方式及详细细节可以在相应界面中点击Tip按钮（右上角的小灯泡）来查看</string>
    <string name="tips_history">*对于已归档的项目，你将只能查看其信息，而无法对其进行任何更改\n\n*点击标题栏中的分享按钮将会生成当前屏幕的长截图进行分享，截图文件将会被保存在SD卡中的My Optimize/ScreenShoots文件夹中</string>
</resources>