<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/existed_time"
            android:text="第 5 天"
            android:textColor="#ff000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:text="@string/rank"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/rank_chooser"
                android:layout_height="35dp"
                android:background="#00000000"
                android:dropDownVerticalOffset="35dp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:text="@string/status"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/status_toggle_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="35dp"
                android:background="@drawable/toggle_button_background"
                android:textColor="#ffffff"
                android:textOff="@string/solving"
                android:textOn="@string/solved"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:text="@string/created_at"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/created_time"
                android:gravity="center"
                android:text="2016-08-19"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/solved_time_row"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <TextView
                android:text="@string/solved_at"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/solved_time"
                android:gravity="center"
                android:text="2016-08-19"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/archived_time_row"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <TextView
                android:text="@string/archived_at"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/archived_time"
                android:gravity="center"
                android:text="2016-08-19"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</ScrollView>