<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_care_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="2dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:navigationIcon="@drawable/close"
            app:title="@string/about"
            app:titleMarginStart="20dp" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="13dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/icon" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@id/icon"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#ff000000"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_name"
                    android:gravity="right"
                    android:paddingRight="30dp"
                    android:text="@string/app_version"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/divider_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="10dp"
                android:text="@string/introduction"
                android:textColor="#1f5fe0"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/app_introduction"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/divider_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="10dp"
                android:text="@string/developer"
                android:textColor="#1f5fe0"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="One Civilization"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/divider_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="10dp"
                android:text="@string/links"
                android:textColor="#1f5fe0"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/contact"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/contact_developer"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/help_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/language"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/help_translate"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/view_source_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/github"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/view_source_code"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/support_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/donate"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/support_developer"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rate_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/star"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/rate_app"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="Copyright © 2016 OneCivilization. All Rights Reserved"
                android:textSize="13sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>